--- a/index.html
+++ b/index.html
@@ -19,9 +19,7 @@
                 margin: 0;
                 font-family: sans-serif;
                 }
-                body{
-                background: #002f5f;
-                }
+               
                 .container{
                 text-align: center;
                 position: absolute;
@@ -72,12 +70,15 @@
             body, html {
                 height: 100%;
                 font-family: 'Bungee Inline', sans-serif;
+                background-image: url("BabyPicture.jpg");
             }
 
             #bg { 
                 /* The image used */
                 /*background-image: url("https://4.bp.blogspot.com/-tLHtG6i7zTk/TprejQCoXEI/AAAAAAAAAIc/Ld79RYa8OYs/s1600/IMG_8651.JPG");*/
                 background-color: white;
+                background-image: url("./image/BabyPicture.jpg");
+                background-size: contain;
 
                 /* Full height */
                 height: 100%;
