--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                 /* The image used */
                 /*background-image: url("https://4.bp.blogspot.com/-tLHtG6i7zTk/TprejQCoXEI/AAAAAAAAAIc/Ld79RYa8OYs/s1600/IMG_8651.JPG");*/
                 background-color: white;
-                background-image: url("./image/BabyPicture.jpg");
+                background-image: url("https://github.com/knowledgepoint/FindMyName/blob/master/image/BabyPicture.jpg");
                 background-size: contain;
 
                 /* Full height */
