--- a/index.html
+++ b/index.html
@@ -70,15 +70,20 @@
             body, html {
                 height: 100%;
                 font-family: 'Bungee Inline', sans-serif;
-                background-image: url("BabyPicture.jpg");
+                background-image: url("https://github.com/knowledgepoint/FindMyName/blob/master/image/BabyPicture.jpg");
             }
 
             #bg { 
                 /* The image used */
                 /*background-image: url("https://4.bp.blogspot.com/-tLHtG6i7zTk/TprejQCoXEI/AAAAAAAAAIc/Ld79RYa8OYs/s1600/IMG_8651.JPG");*/
                 background-color: white;
-                background-image: url("https://github.com/knowledgepoint/FindMyName/blob/master/image/BabyPicture.jpg");
-                background-size: contain;
+                background-image: url("./image/BabyPicture.jpg");
+                height: 100px;
+                background-position: center;
+                background-repeat: no-repeat;
+                background-size: cover;
+                position: relative;
+                
 
                 /* Full height */
                 height: 100%;
@@ -164,6 +169,10 @@
                     startAnimation();
                     var divControl = document.getElementById("nameBanner");
                     divControl.style.visibility="visible";
+                    divControl = document.getElementById("maindiv");
+                    divControl.style.visibility="hidden";
+                    divControl = document.getElementById("cluediv");
+                    divControl.style.visibility="hidden";
                 }
                 else
                 {
@@ -201,7 +210,7 @@
             }
 
             function showClue1(){
-                document.getElementById("clue1").value="it's a 6 letter word";
+                document.getElementById("clue1").value="it's a 7 letter word";
             }
 
             function showClue2(){
@@ -478,7 +487,7 @@
                     </div>     
                 </div>
             </div>
-            <div class="form-group row flex-v-center">    
+            <div id="maindiv" class="form-group row flex-v-center">    
             <div class="col-xs-3 col-sm-2">
                    <input id="1" type="text" class="form-control" name="1" placeholder="Enter Baby's Name">
                    
@@ -488,13 +497,13 @@
                     <button id="found" class="btn btn-success"  onclick="validate()"> got it..!!!</button>
             </div>
             </div>
-            <div class="form-group row flex-v-center">
+            <div id="cluediv" class="form-group row flex-v-center">
                 <div class="col-xs-3" col-sm-2>
-                    <input type="text" id="clue1" name="clue1" class="form-control" placeholder="clue1">
-                    <input type="text" id="clue2" name="clue2" class="form-control" placeholder="clue2">
-                    <input type="text" id="clue3" name="clue3" class="form-control" placeholder="clue3">
-                    <input type="text" id="clue4" name="clue4" class="form-control" placeholder="clue4">
-                    <input type="text" id="clue5" name="clue5" class="form-control" placeholder="clue5">
+                    <input type="text" id="clue1" name="clue1" class="form-control" placeholder="clue1"><br>
+                    <input type="text" id="clue2" name="clue2" class="form-control" placeholder="clue2"><br>
+                    <input type="text" id="clue3" name="clue3" class="form-control" placeholder="clue3"><br>
+                    <input type="text" id="clue4" name="clue4" class="form-control" placeholder="clue4"><br>
+                    <input type="text" id="clue5" name="clue5" class="form-control" placeholder="clue5"><br>
                     <input type="text" id="clue6" name="clue6" class="form-control" placeholder="clue6">
                     <input type="hidden" id="giveClue">
                 </div>
