with header text

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
             }
 
             h1 {
-                color: blue;
+                color:black;
                 font-family: verdana;
                 font-size: 300%;
             }
@@ -172,6 +172,8 @@
                     divControl = document.getElementById("maindiv");
                     divControl.style.visibility="hidden";
                     divControl = document.getElementById("cluediv");
+                    divControl.style.visibility="hidden";
+                    divControl=document.getElementById("bannerdiv");
                     divControl.style.visibility="hidden";
                 }
                 else
@@ -486,6 +488,9 @@
                             
                     </div>     
                 </div>
+            </div>
+            <div id="bannerdiv">
+                <h1><b>Eager To Know My Name ? Guess It ...!!!</b></h1>
             </div>
             <div id="maindiv" class="form-group row flex-v-center">    
             <div class="col-xs-3 col-sm-2">
