--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                
                 .container{
                 text-align: center;
-                position: absolute;
+                position: sticky;
                 top: 50%;
                 left: 50%;
                 transform: translate(-50%,-50%);
@@ -34,14 +34,14 @@
                 display: block;
                 }
                 .mytext1{
-                color: white;
+                color:whitesmoke;
                 font-size: 60px;
                 font-weight: 700;
                 letter-spacing: 8px;
                 margin-bottom: 20px;
-                background: #002f5f;
-                position: sticky;
-                animation: text 3s 1;
+                background:midnightblue;
+                position: relative;
+                animation: text 12s 1;
 
                 }
                 .mytext2{
