--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
                 letter-spacing: 6px;
                 margin-bottom: 1px;
                 background:midnightblue;
+                background-size: cover;
                 position: sticky;
                 animation: text 12s 1;
 
