--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
                 letter-spacing: 6px;
                 margin-bottom: 1px;
                 background:midnightblue;
-                background-size: cover;
-                position: sticky;
+                background-position: relative;
+                position: relative;
                 animation: text 12s 1;
 
                 }
