--- a/index.html
+++ b/index.html
@@ -34,12 +34,12 @@
                 display: block;
                 }
                 .mytext1{
-                color:whitesmoke;
-                font-size: 50px;
+                color: #E91E63;
+                font-size: 60px;
                 font-weight: 700;
                 letter-spacing: 6px;
                 margin-bottom: 250px;
-                background:midnightblue;
+                background:transparent;
                 background-size: 100%;
                 position: relative;
                 animation: text 12s 1;
