--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                 /*background-image: url("https://4.bp.blogspot.com/-tLHtG6i7zTk/TprejQCoXEI/AAAAAAAAAIc/Ld79RYa8OYs/s1600/IMG_8651.JPG");*/
                 background-color: white;
                 background-image: url("./image/BabyPicture.jpg");
-                height: 100px;
+                height: fit-content;
                 background-position: center;
                 background-repeat: no-repeat;
                 background-size: cover;
@@ -450,7 +450,6 @@
                     <div class="row">    
                         <div class="col-xs-6 col-md-4">
                             <input id="1" type="text" class="form-control" name="1" placeholder="Enter Baby's Name">
-                            
                         </div>
                     </div>
                     <div class="row">
