--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
                 letter-spacing: 8px;
                 margin-bottom: 20px;
                 background: #002f5f;
-                position: relative;
-                animation: text 3s 1;
+                position: inherit;
+                animation: text 12s 1;
                 }
                 .mytext2{
                 font-size: 30px;
@@ -96,7 +96,8 @@
                 color: black;
                 background-color:floralwhite;
                 font-family: verdana;
-                margin-bottom: 10%;
+                margin-left: 2%;
+                margin-bottom: 5%;
             }
             input[type=button], select {
                 background-color:orange;
@@ -453,17 +454,37 @@
                     </div>
                                    
                     <div class="row"> 
-                        <div class="col-xs-6 col-md-4">
+                        <div class="col-xs-6 col-md-6">
                             <input type="text" id="clue1" name="clue1" class="form-control" placeholder="clue1">
                         </div>
                     </div>
                     <div class="row"> 
                         <div class="col-xs-6 col-md-6">
                             <input type="text" id="clue2" name="clue2" class="form-control" placeholder="clue2">
+                        </div>
+                    </div>
+                    <div class="row"> 
+                        <div class="col-xs-6 col-md-6">
                             <input type="text" id="clue3" name="clue3" class="form-control" placeholder="clue3">
+                        </div>
+                    </div>   
+                    <div class="row"> 
+                        <div class="col-xs-6 col-md-6">
                             <input type="text" id="clue4" name="clue4" class="form-control" placeholder="clue4">
+                        </div>
+                    </div>   
+                    <div class="row"> 
+                        <div class="col-xs-6 col-md-6">
                             <input type="text" id="clue5" name="clue5" class="form-control" placeholder="clue5">
+                        </div>
+                    </div>   
+                    <div class="row"> 
+                        <div class="col-xs-6 col-md-6">
                             <input type="text" id="clue6" name="clue6" class="form-control" placeholder="clue6">
+                        </div>
+                    </div>   
+                    <div class="row"> 
+                        <div class="col-xs-6 col-md-6">        
                             <input type="hidden" id="giveClue">
                         </div>
                     </div>
