--- a/index.html
+++ b/index.html
@@ -103,17 +103,17 @@
                 background-color:orange;
                 color: black;
                 font-family: verdana;
+                margin-left: 5%;
+                margin-bottom: 5%;
             }
             .button {
                 background-color: #4CAF50; /* Green */
                 border: none;
                 color: white;
-                padding: 8px 22px;
                 text-align: center;
                 text-decoration: none;
                 display: inline-block;
                 font-size: 12px;
-                margin: 4px 2px;
                 -webkit-transition-duration: 0.4s; /* Safari */
                 transition-duration: 0.4s;
                 cursor: pointer;
@@ -430,7 +430,7 @@
                 </div>
                 <div class="row">
                     <div class="col-xs-6 col-md-4">
-                        <div id="nameBanner" class="container" style="visibility: hidden;">
+                        <div id="nameBanner" class="container-fluid" style="visibility: hidden;">
                                 <span class="mytext1">NIKILAN</span>
                                 
                         </div>     
@@ -443,7 +443,7 @@
             <div class="container-fluid">
                 <div id="maindiv" class="form-group row flex-v-center">   
                     <div class="row">    
-                        <div class="col-xs-6 col-md-4">
+                        <div class="col-xs-6 col-md-9">
                             <input id="1" type="text" class="form-control" name="1" placeholder="Enter Baby's Name">
                         </div>
                     </div>
@@ -454,37 +454,37 @@
                     </div>
                                    
                     <div class="row"> 
-                        <div class="col-xs-6 col-md-6">
+                        <div class="col-xs-6 col-md-9">
                             <input type="text" id="clue1" name="clue1" class="form-control" placeholder="clue1">
                         </div>
                     </div>
                     <div class="row"> 
-                        <div class="col-xs-6 col-md-6">
+                        <div class="col-xs-6 col-md-9">
                             <input type="text" id="clue2" name="clue2" class="form-control" placeholder="clue2">
                         </div>
                     </div>
                     <div class="row"> 
-                        <div class="col-xs-6 col-md-6">
+                        <div class="col-xs-6 col-md-9">
                             <input type="text" id="clue3" name="clue3" class="form-control" placeholder="clue3">
                         </div>
                     </div>   
                     <div class="row"> 
-                        <div class="col-xs-6 col-md-6">
+                        <div class="col-xs-6 col-md-9">
                             <input type="text" id="clue4" name="clue4" class="form-control" placeholder="clue4">
                         </div>
                     </div>   
                     <div class="row"> 
-                        <div class="col-xs-6 col-md-6">
+                        <div class="col-xs-6 col-md-9">
                             <input type="text" id="clue5" name="clue5" class="form-control" placeholder="clue5">
                         </div>
                     </div>   
                     <div class="row"> 
-                        <div class="col-xs-6 col-md-6">
+                        <div class="col-xs-6 col-md-9">
                             <input type="text" id="clue6" name="clue6" class="form-control" placeholder="clue6">
                         </div>
                     </div>   
                     <div class="row"> 
-                        <div class="col-xs-6 col-md-6">        
+                        <div class="col-xs-6 col-md-9">        
                             <input type="hidden" id="giveClue">
                         </div>
                     </div>
