--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
                 margin-bottom: 5%;
             }
             .button {
-                background-color: #4CAF50; /* Green */
+                background-color: orangered; /* Green */
                 border: none;
                 color: white;
                 text-align: center;
@@ -428,8 +428,10 @@
                         <canvas id="canvas" width="0" height="0"></canvas><br>
                     </div>
                 </div>
+            </div>
+            <div id="namesettings" class="form-group row flex-v-center">
                 <div class="row">
-                    <div class="col-xs-6 col-md-4">
+                    <div class="col-xs-6 col-md-6">
                         <div id="nameBanner" class="container-fluid" style="visibility: hidden;">
                                 <span class="mytext1">NIKILAN</span>
                                 
@@ -443,7 +445,7 @@
             <div class="container-fluid">
                 <div id="maindiv" class="form-group row flex-v-center">   
                     <div class="row">    
-                        <div class="col-xs-6 col-md-9">
+                        <div class="col-xs-6 col-sm-9">
                             <input id="1" type="text" class="form-control" name="1" placeholder="Enter Baby's Name">
                         </div>
                     </div>
@@ -454,7 +456,7 @@
                     </div>
                                    
                     <div class="row"> 
-                        <div class="col-xs-6 col-md-9">
+                        <div class="col-xs-6 col-sm-9">
                             <input type="text" id="clue1" name="clue1" class="form-control" placeholder="clue1">
                         </div>
                     </div>
@@ -479,7 +481,7 @@
                         </div>
                     </div>   
                     <div class="row"> 
-                        <div class="col-xs-6 col-md-9">
+                        <div class="col-xs-6 col-sm-9">
                             <input type="text" id="clue6" name="clue6" class="form-control" placeholder="clue6">
                         </div>
                     </div>   
