container width set to 150 container position set to relative

--- a/index.html
+++ b/index.html
@@ -22,11 +22,11 @@
                
                 .container{
                 text-align: center;
-                position: absolute;
+                position: relative;
                 top: 50%;
                 left: 50%;
                 transform: translate(-50%,-50%);
-                width: 100%;
+                width: 150%;
                 }
                 .container span{
                 text-transform: uppercase;
@@ -39,6 +39,7 @@
                 letter-spacing: 8px;
                 margin-bottom: 20px;
                 background: #002f5f;
+                background-size: cover;
                 position: relative;
                 animation: text 12s 3;
                 }
