reverted container width 150 and position relative. removed the name background. changed the text color

--- a/index.html
+++ b/index.html
@@ -22,23 +22,23 @@
                
                 .container{
                 text-align: center;
-                position: relative;
+                position: absolute;
                 top: 50%;
                 left: 50%;
                 transform: translate(-50%,-50%);
-                width: 150%;
+                width: 100%;
                 }
                 .container span{
                 text-transform: uppercase;
                 display: block;
                 }
                 .mytext1{
-                color: white;
+                color: #002f5f;
                 font-size: 60px;
                 font-weight: 700;
                 letter-spacing: 8px;
                 margin-bottom: 20px;
-                background: #002f5f;
+                background: transparent;
                 background-size: cover;
                 position: relative;
                 animation: text 12s 3;
