--- a/index.html
+++ b/index.html
@@ -438,7 +438,7 @@
             </div>
             <div class="container-fluid">
                 <div id="maindiv" class="form-group row flex-v-center">    
-                    <div class="col-xs-1 col-sm-9">
+                    <div class="col-xs-1 col-md-9">
                         <input id="1" type="text" class="form-control" name="1" placeholder="Enter Baby's Name">
                         <button id="found" class="btn btn-success"  onclick="validate()"> got it..!!!</button>
                     </div>
