--- a/index.html
+++ b/index.html
@@ -439,7 +439,7 @@
             <div class="container-fluid">
                 <div id="maindiv" class="form-group row flex-v-center">    
                     <div class="row">
-                        <div class="col-xs-6 col-md-9">
+                        <div class="col-xs-9 col-sm-9">
                             <input id="1" type="text" class="form-control" name="1" placeholder="Enter Baby's Name">
                             <button id="found" class="btn btn-success"  onclick="validate()"> got it..!!!</button>
                         </div>
