guess my name text within container

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
             h1 {
                 color:gold;
                 font-family: verdana;
-                font-size: 300%;
+                /*font-size: 300%;*/
             }
             canvas {
                 background-color: transparent;
@@ -406,11 +406,12 @@
                     </div>     
                 </div>
             </div>
-            <div  id="bannerdiv">
-                <h1><b><u>Guess My Name ...!!!</u></b></h1>
-            </div>
+            
             <div class="container-fluid">
                 <div id="maindiv" class="form-group row flex-v-center">    
+                    <div id="bannerdiv" class="row">
+                        <h1><b>Guess My Name ...!!!</b></h1>
+                    </div>
                     <div class="row">
                         <div class="col-xs-6 col-sm-6">
                             </p>
