guess name label div hidden

--- a/index.html
+++ b/index.html
@@ -409,7 +409,7 @@
             
             <div class="container-fluid">
                 <div id="maindiv" class="form-group row flex-v-center">    
-                    <div id="bannerdiv" class="row">
+                    <div id="bannerdiv" class="row" style="visibility: hidden;">
                         <h1><b>Guess My Name ...!!!</b></h1>
                     </div>
                     <div class="row">
