clue color and background changes

--- a/index.html
+++ b/index.html
@@ -113,7 +113,8 @@
             .clues{
                 font-size: large;
                 font-weight: bold;
-                color: orange; 
+                color:whitesmoke;
+                background-color: #002f5f;  
             }    
         </style>
         <script>
@@ -445,21 +446,7 @@
                     <div id="clue6" class="clues" style="visibility: hidden;">
                             <p>Clue 6: (1,2 and 5) non-existent or nothing</p>
                     </div>
-                        <!--<div class="col-xs-9 col-md-9">
-                            </p>
-                            <input type="text" id="clue1" name="clue1" class="input-group-lg" placeholder="Clue1: It's a 7 letter word">
-                            </p>
-                            <input type="text" id="clue2" name="clue2" class="form-control" placeholder="Clue2">
-                            </p>
-                            <input type="text" id="clue3" name="clue3" class="form-control" placeholder="Clue3">
-                            </p>
-                            <input type="text" id="clue4" name="clue4" class="form-control" placeholder="Clue4">
-                            </p>
-                            <input type="text" id="clue5" name="clue5" class="form-control" placeholder="Clue5">
-                            </p>
-                            <input type="text" id="clue6" name="clue6" class="form-control" placeholder="Clue6">
-                            
-                        </div>-->
+                        
                     </div>
                 </div>
             </div>
