font size to medium background color changes

--- a/index.html
+++ b/index.html
@@ -111,10 +111,10 @@
                     text-align: center;
                 }
             .clues{
-                font-size: large;
+                font-size: medium;
                 font-weight: bold;
                 color:whitesmoke;
-                background-color: #002f5f;  
+                background-color: darkslateblue;  
             }    
         </style>
         <script>
