name color display change

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 display: block;
                 }
                 .mytext1{
-                color: #002f5f;
+                color: orangered;
                 font-size: 60px;
                 font-weight: 700;
                 letter-spacing: 8px;
