Changed Clue to Hint

--- a/index.html
+++ b/index.html
@@ -429,22 +429,22 @@
                         </div>
                     </div>
                     <div id="clue1" class="clues">
-                        <p>Clue 1: It's a 7 letter word.</p>
+                        <p>Hint 1: It's a 7 letter word.</p>
                     </div>
                     <div id="clue2" class="clues" style="visibility: hidden;">
-                            <p>Clue 2: Another name of lord murugan</p>
+                            <p>Hint 2: Another name of lord murugan</p>
                     </div>
                     <div id="clue3" class="clues" style="visibility: hidden;">
-                            <p> Clue 3: Name ends with letter N</p>
+                            <p> Hint 3: Name ends with letter N</p>
                     </div>
                     <div id="clue4" class="clues" style="visibility: hidden;">
-                            <p>Clue 4 : (3,4,5 and 7) oven for burning and baking</p>
+                            <p>Hint 4 : (3,4,5 and 7) oven for burning and baking</p>
                     </div>
                     <div id="clue5" class="clues" style="visibility: hidden;">
-                            <p>Clue 5: (3,4 and 7) a family</p>
+                            <p>Hint 5: (3,4 and 7) a family</p>
                     </div>
                     <div id="clue6" class="clues" style="visibility: hidden;">
-                            <p>Clue 6: (1,2 and 5) non-existent or nothing</p>
+                            <p>Hint 6: (1,2 and 5) non-existent or nothing</p>
                     </div>
                         
                     </div>
